Align Fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2525,7 +2525,6 @@
 
 	section .inner {
 		max-width: 65em;
-		float:right;
 		width: calc(100% - 6em);
 		margin: 0 auto;
 	}
@@ -3370,7 +3369,7 @@
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: 15% left;
-		text-align: left;
+		text-align: right;
 		position: relative;
 		z-index: 9999;
 	}
